src/main/java/com/example/storeprojectstep1/errors/exception/Exception401.java
package com.example.storeprojectstep1.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }
}
